@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.4446 2005/10/13 12:01:10 lf_sfnet Exp $
+ * $Id: ChangeLog,v 1.4447 2005/10/13 12:49:35 druzus Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2005-10-14 00:20 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/vm/Makefile
+  * xharbour/source/vm/errorapi.c
+  + xharbour/source/vm/throw.c
+    * move THROW() function to separate file so it can be overloaded
+      in xbasescript - non GNU make files has to be updated.
 
 2005-10-13 14:45 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
   * xharbour/make_tgz.sh
